Agregar constructores JS

--- a/JS/index.html
+++ b/JS/index.html
@@ -11,5 +11,7 @@
         Programación Orientada a objetos en JavaScript
     </h1>
 </body>
+<script src="Account.js"></script>
+<script src="Car.js"></script>
 <script src="index.js"></script>
 </html>
